Fix adjacent every algorithm

--- a/Constraint-Rule Unification.ipynb
+++ b/Constraint-Rule Unification.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "scientific-tracker",
+   "id": "whole-palestinian",
    "metadata": {
     "collapsed": true
    },
@@ -41,8 +41,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "moved-acquisition",
+   "execution_count": 2,
+   "id": "hidden-gibson",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,8 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "marine-apparel",
+   "execution_count": 3,
+   "id": "political-medium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +65,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "raising-container",
+   "execution_count": 4,
+   "id": "mobile-council",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,8 +76,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "undefined-balance",
+   "execution_count": 5,
+   "id": "smart-cocktail",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,8 +86,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "marine-gauge",
+   "execution_count": 6,
+   "id": "configured-power",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,8 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "accompanied-criminal",
+   "execution_count": 7,
+   "id": "revolutionary-typing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,8 +248,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "brief-fault",
+   "execution_count": 8,
+   "id": "chinese-hamburg",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,8 +263,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
-   "id": "suspected-recommendation",
+   "execution_count": 119,
+   "id": "forced-eclipse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,34 +334,39 @@
     "        num_obj1 = num_objects[self.space_object1]\n",
     "        num_obj2 = num_objects[self.space_object2]\n",
     "        \n",
+    "        for obj in board:\n",
+    "            if obj is self.space_object1:\n",
+    "                num_obj1 -= 1\n",
+    "            elif obj is self.space_object2:\n",
+    "                num_obj2 -= 1\n",
+    "        \n",
     "        board_perms = fill_no_touch({self.space_object1: num_obj1, self.space_object2: num_obj2}, board)\n",
     "        return [Board(board_objects) for board_objects in board_perms]\n",
-    "        \n",
-    "    def _fill_board_every(self, board, num_objects, start_i=0):\n",
+    "    \n",
+    "    \n",
+    "    def _fill_board_every(self, board, num_objects, num_objects_left, start_i=0):\n",
+    "        # num_objects: how many should be on the board starting from start_i\n",
+    "        # num_objects_left: how many still need to be placed\n",
     "        num_obj1 = num_objects[self.space_object1]\n",
     "        num_obj2 = num_objects[self.space_object2]\n",
+    "        \n",
+    "        num_obj1_left = num_objects_left[self.space_object1]\n",
+    "        num_obj2_left = num_objects_left[self.space_object2]\n",
+    "                \n",
     "        new_num_objects = num_objects.copy()\n",
-    "        \n",
-    "        num_obj2_left = num_obj2 - len([i for i in range(start_i, len(board)) if board[i] is self.space_object2])\n",
-    "        num_obj1_already = len([i for i in range(start_i, len(board)) if board[i] is self.space_object1])\n",
-    "        num_obj1_left = num_obj1 - num_obj1_already\n",
-    "        \n",
-    "        print(\"Going again?\", board, start_i, num_obj1, num_obj1_already)\n",
-    "        \n",
-    "        if num_obj1 == 0 and num_obj1_already == 0:\n",
-    "            print(\"Finished\", board, start_i, num_obj1, num_obj1_already)\n",
+    "        new_num_objects_left = num_objects_left.copy()\n",
+    "\n",
+    "        if num_obj1 == 0:\n",
     "            return [ board ]\n",
     "        \n",
     "        new_boards = []\n",
-    "        \n",
     "        for i in range(start_i, len(board)):\n",
     "            obj = board[i]\n",
+    "            is_obj1 = obj is self.space_object1\n",
     "            # Attempt to fill each position with an object1 if possible\n",
-    "            if obj is None or obj is self.space_object1:\n",
+    "            if obj is None or is_obj1:\n",
     "                options = 0\n",
-    "                print(board, i)\n",
-    "                if obj is self.space_object1 or num_obj1_left > 0:\n",
-    "                    print(\"May proceed\")\n",
+    "                if is_obj1 or num_obj1_left > 0:\n",
     "                    if board[i-1] is self.space_object2 or board[i+1] is self.space_object2:\n",
     "                        options += 1\n",
     "                        # If there is already an obj2 next to it, fill with obj1 and proceed\n",
@@ -369,8 +374,9 @@
     "                        board_copy[i] = self.space_object1\n",
     "                        new_num_objects[self.space_object1] = num_obj1 - 1\n",
     "                        new_num_objects[self.space_object2] = num_obj2\n",
-    "                        print(\"Already\", board, num_obj1, new_num_objects)\n",
-    "                        new_boards.extend(self._fill_board_every(board_copy, new_num_objects, i+1))\n",
+    "                        new_num_objects_left[self.space_object1] = num_obj1_left - (not is_obj1)\n",
+    "                        new_num_objects_left[self.space_object2] = num_obj2\n",
+    "                        new_boards.extend(self._fill_board_every(board_copy, new_num_objects, new_num_objects_left, i+1))\n",
     "                    elif num_obj2_left > 0:\n",
     "                        # Otherwise there must be obj2 left to use\n",
     "                        if board[i-1] is None and board[i-2] is not self.space_object1:\n",
@@ -382,10 +388,11 @@
     "                            board_copy[i-1] = self.space_object2\n",
     "                            new_num_objects[self.space_object1] = num_obj1 - 1\n",
     "                            new_num_objects[self.space_object2] = num_obj2 - 1\n",
-    "                            print(\"Placed left\", board, board_copy, num_obj1)\n",
-    "                            new_boards.extend(self._fill_board_every(board_copy, new_num_objects, i+1))\n",
-    "\n",
-    "                        if board[i+1] is None and (i+2 < len(board) or board[i+2] is not self.space_object2):\n",
+    "                            new_num_objects_left[self.space_object1] = num_obj1_left - (not is_obj1)\n",
+    "                            new_num_objects_left[self.space_object2] = num_obj2_left - 1\n",
+    "                            new_boards.extend(self._fill_board_every(board_copy, new_num_objects, new_num_objects_left, i+1))\n",
+    "                    \n",
+    "                        if board[i+1] is None and (i+2 < len(board) or board[i+2] is not self.space_object1):\n",
     "                            # Do not put an obj2 on the right if there is a obj1\n",
     "                            # to the right of that, to avoid duplicate boards\n",
     "                            # Only follow this restriction if we are looking at a space object that we placed \n",
@@ -396,12 +403,12 @@
     "                            board_copy[i+1] = self.space_object2\n",
     "                            new_num_objects[self.space_object1] = num_obj1 - 1\n",
     "                            new_num_objects[self.space_object2] = num_obj2 - 1\n",
-    "                            print(\"Placed right\", board, board_copy, num_obj1)\n",
-    "                            new_boards.extend(self._fill_board_every(board_copy, new_num_objects, i+2))\n",
+    "                            new_num_objects_left[self.space_object1] = num_obj1_left - (not is_obj1)\n",
+    "                            new_num_objects_left[self.space_object2] = num_obj2_left - 1\n",
+    "                            new_boards.extend(self._fill_board_every(board_copy, new_num_objects, new_num_objects_left, i+2))\n",
     "\n",
-    "                if obj is self.space_object1 and options == 0:\n",
+    "                if is_obj1 and options == 0:\n",
     "                    # Unable to place an obj2 next to an existing obj1\n",
-    "                    print(\"Couldn't place\", board, i, num_obj1_left, num_obj2_left)\n",
     "                    return []\n",
     "            \n",
     "        return new_boards\n",
@@ -413,7 +420,12 @@
     "            # Not yet supported\n",
     "            return None\n",
     "        else:\n",
-    "            return self._fill_board_every(board, num_objects)\n",
+    "            num_objects_left = num_objects.copy()\n",
+    "            for obj in board:\n",
+    "                if obj is self.space_object1 or obj is self.space_object2:\n",
+    "                    num_objects_left[obj] -= 1\n",
+    "                \n",
+    "            return self._fill_board_every(board, num_objects, num_objects_left)\n",
     "            \n",
     "    def affects(self):\n",
     "        if self.qualifier is RuleQualifier.NONE:\n",
@@ -558,18 +570,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
-   "id": "smoking-people",
+   "execution_count": 130,
+   "id": "arabic-copyright",
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = Board([None, None, SpaceObject.GasCloud, None, None])"
+    "b = Board([None, None, SpaceObject.GasCloud, SpaceObject.Empty, None])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
-   "id": "divine-afghanistan",
+   "execution_count": 131,
+   "id": "integrated-selling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,78 +590,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "id": "linear-hindu",
+   "execution_count": 132,
+   "id": "ultimate-meditation",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Going again? --G-- 0 2 1\n",
-      "--G-- 0\n",
-      "May proceed\n",
-      "Placed left --G-- G-G-E 2\n",
-      "Going again? G-G-E 1 1 1\n",
-      "G-G-E 1\n",
-      "G-G-E 2\n",
-      "May proceed\n",
-      "Couldn't place G-G-E 2 0 0\n",
-      "Placed right --G-- GEG-- 2\n",
-      "Going again? GEG-- 2 1 1\n",
-      "GEG-- 2\n",
-      "May proceed\n",
-      "Already GEG-- 1 {<Planet X>: 1, <empty sector>: 1, <gas cloud>: 0, <dwarf planet>: 1, <asteroid>: 4, <comet>: 2}\n",
-      "Going again? GEG-- 3 0 0\n",
-      "Finished GEG-- 3 0 0\n",
-      "GEG-- 3\n",
-      "GEG-- 4\n",
-      "--G-- 1\n",
-      "May proceed\n",
-      "Placed left --G-- EGG-- 2\n",
-      "Going again? EGG-- 2 1 1\n",
-      "EGG-- 2\n",
-      "May proceed\n",
-      "Placed right EGG-- EGGE- 1\n",
-      "Going again? EGGE- 4 0 0\n",
-      "Finished EGGE- 4 0 0\n",
-      "EGG-- 3\n",
-      "EGG-- 4\n",
-      "--G-- 2\n",
-      "May proceed\n",
-      "Placed left --G-- -EG-- 2\n",
-      "Going again? -EG-- 3 1 0\n",
-      "-EG-- 3\n",
-      "May proceed\n",
-      "Placed right -EG-- -EGGE 1\n",
-      "Going again? -EGGE 5 0 0\n",
-      "Finished -EGGE 5 0 0\n",
-      "-EG-- 4\n",
-      "May proceed\n",
-      "Placed right --G-- --GE- 2\n",
-      "Going again? --GE- 4 1 0\n",
-      "--GE- 4\n",
-      "May proceed\n",
-      "Already --GE- 1 {<Planet X>: 1, <empty sector>: 1, <gas cloud>: 0, <dwarf planet>: 1, <asteroid>: 4, <comet>: 2}\n",
-      "Going again? --GEG 5 0 0\n",
-      "Finished --GEG 5 0 0\n",
-      "--G-- 3\n",
-      "May proceed\n",
-      "Placed right --G-- --GGE 2\n",
-      "Going again? --GGE 5 1 0\n",
-      "--G-- 4\n",
-      "May proceed\n",
-      "Placed right --G-- E-G-G 2\n",
-      "Going again? E-G-G 6 1 0\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[<Board GEG-->, <Board EGGE->, <Board -EGGE>, <Board --GEG>]"
+       "[<Board G-GEE>, <Board GEGE->, <Board EGGE->, <Board --GEG>]"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 180,
-   "id": "cellular-disclosure",
+   "id": "successful-execution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "interesting-applicant",
+   "id": "apparent-airport",
    "metadata": {},
    "outputs": [],
    "source": []
