--- a/Permutation Exploration.ipynb
+++ b/Permutation Exploration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "automotive-authentication",
+   "id": "equipped-mouse",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "excess-breakfast",
+   "id": "ceramic-diploma",
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "naval-immigration",
+   "id": "induced-anxiety",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "involved-mercury",
+   "id": "vital-population",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": 289,
-   "id": "democratic-meditation",
+   "id": "undefined-difference",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,144 +1258,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
-   "id": "rubber-waterproof",
+   "execution_count": 546,
+   "id": "turkish-hierarchy",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-318-4f235b838c47>, line 23)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-318-4f235b838c47>\"\u001b[0;36m, line \u001b[0;32m23\u001b[0m\n\u001b[0;31m    if is_new_obj and can_come_before_hole\u001b[0m\n\u001b[0m                                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "def sum_counts(d):\n",
-    "    s = 0\n",
-    "    for k in d:\n",
-    "        s += d[k]\n",
-    "    return s\n",
-    "    \n",
-    "def _fill_no_touch(lst, holes, no_touch_objs, t=0):\n",
-    "    if len(lst) == 0:\n",
-    "        if all(holes):\n",
-    "            yield [None]*len(holes)\n",
-    "        return\n",
-    "    else:\n",
-    "        if holes[0]:\n",
-    "            for p in _fill_no_touch(lst, holes[1:], no_touch_objs, t+1):\n",
-    "                can_come_after_hole = len(p) == 0 or p[0] != holes[0][-1]\n",
-    "                if can_come_after_hole:\n",
-    "                    yield [None] + p\n",
-    "        else:\n",
-    "            for i in range(len(lst)):\n",
-    "                is_new_obj = (i == 0 or lst[i] != lst[i-1])\n",
-    "                next_is_hole = len(holes) > 1 and holes[1] != False\n",
-    "                can_come_before_hole = (not next_is_hole) or lst[i] is None or holes[1][0] == lst[i] or holes[1][0] not in no_touch_objs\n",
-    "                if is_new_obj and can_come_before_hole\n",
-    "                    rest = lst[:i] + lst[i+1:]\n",
-    "                    for p in _fill_no_touch(rest, holes[1:], no_touch_objs, t+1):\n",
-    "                        if len(p) == 0 or p[0] == lst[i] or p[0] is None or lst[i] is None:\n",
-    "                            yield [lst[i]] + p\n",
-    "\n",
-    "def fill_no_touch(counts, board):\n",
-    "    holes = []\n",
-    "    in_hole = False\n",
-    "    for obj in board:\n",
-    "        if obj is None:\n",
-    "            holes.append(False)\n",
-    "            in_hole = False\n",
-    "        elif in_hole:\n",
-    "            holes[-1] += (obj,)\n",
-    "        else:\n",
-    "            in_hole = True\n",
-    "            holes.append((obj,))\n",
-    "                        \n",
-    "    num_holes = len([val for val in holes if val != False])\n",
-    "    empty = len([obj for obj in board if obj is None]) - sum_counts(counts)\n",
-    "    gaps = num_holes + empty\n",
-    "    \n",
-    "    if len(counts.keys()) > gaps:\n",
-    "        return []\n",
-    "    else:\n",
-    "        lst = []\n",
-    "        for val in counts:\n",
-    "            for i in range(counts[val]):\n",
-    "                lst.append(val)\n",
-    "        for i in range(empty):\n",
-    "            lst.append(None)\n",
-    "                    \n",
-    "        for p in _fill_no_touch(lst, holes, counts.keys()):\n",
-    "            if p[0] == p[-1] or p[0] is None or p[-1] is None or p[0] not in counts or p[-1] not in counts:\n",
-    "                if holes[-1] == False or p[0] not in counts or holes[0] != False or p[0] == holes[-1][-1]:\n",
-    "                    board_copy = board.copy()\n",
-    "                    j = 0\n",
-    "                    for i in range(len(board_copy)):\n",
-    "                        if board[i] is None:\n",
-    "                            board_copy[i] = p[j]\n",
-    "                            j += 1\n",
-    "                        elif board[i-1] is None:\n",
-    "                            j += 1\n",
-    "                    yield board_copy"
+    "def fill_every_touch(obj1, obj2, counts, board):\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
-   "id": "hazardous-tension",
+   "execution_count": 547,
+   "id": "reverse-commissioner",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['A', None, 'B', 'D', 'A', None, 'B', 'E', 'F', 'A'],\n",
-       " ['A', None, 'B', 'D', 'B', None, 'A', 'E', 'F', 'A'],\n",
-       " ['B', None, 'B', 'D', 'A', 'A', 'A', 'E', 'F', None],\n",
-       " [None, 'B', 'B', 'D', 'A', 'A', 'A', 'E', 'F', None],\n",
-       " [None, 'B', 'B', 'D', 'A', 'A', None, 'E', 'F', 'A'],\n",
-       " [None, 'B', 'B', 'D', 'A', None, 'A', 'E', 'F', 'A'],\n",
-       " [None, 'B', 'B', 'D', None, 'A', 'A', 'E', 'F', 'A'],\n",
-       " [None, None, 'B', 'D', 'A', 'A', 'A', 'E', 'F', 'B']]"
+       "[]"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 547,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(fill_no_touch({\"A\": 3, \"B\": 1}, [None, None, \"B\", \"D\", None, None, None, \"E\", \"F\", None]))"
+    "list(fill_every_touch(\"A\", \"B\", {\"A\": 2, \"B\": 3}, [None]*5))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
-   "id": "forced-berlin",
+   "execution_count": 552,
+   "id": "affiliated-sport",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 552,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(fill_no_touch({\"A\": 3, \"B\": 3}, [None, None, \"B\", \"D\", None, \"B\", None, None, \"E\", \"F\", None]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 536,
+   "id": "boring-compilation",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[['A', 'A', 'A', 'D', 'B', 'B', 'B', 'E', 'F', None],\n",
-       " ['A', None, 'A', 'D', 'B', 'B', 'B', 'E', 'F', 'A'],\n",
-       " [None, 'A', 'A', 'D', 'B', 'B', 'B', 'E', 'F', 'A']]"
+       "[['A', None, 'B', 'D', 'B', 'B', 'B', 'E', 'F', 'A'],\n",
+       " ['B', 'B', 'B', 'D', 'A', 'A', None, 'E', 'F', 'B'],\n",
+       " ['B', 'B', 'B', 'D', 'A', None, 'A', 'E', 'F', 'B'],\n",
+       " ['B', 'B', 'B', 'D', None, 'A', 'A', 'E', 'F', 'B']]"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 536,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fill_no_touch2({\"A\": 2, \"B\": 3}, [None, None, \"A\", \"D\", None, None, None, \"E\", \"F\", None])"
+    "fill_no_touch2({\"A\": 2, \"B\": 3}, [None, None, \"B\", \"D\", None, None, None, \"E\", \"F\", None])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "id": "selected-speaker",
+   "execution_count": 537,
+   "id": "legal-magic",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1411,50 +1354,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
-   "id": "standing-rocket",
+   "execution_count": 538,
+   "id": "developing-miniature",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.301326348002476"
+       "0.3251120299973991"
       ]
      },
-     "execution_count": 294,
+     "execution_count": 538,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "timeit.timeit('fill_no_touch2({\"A\": 2, \"B\": 3}, [None, None, \"A\", \"D\", None, None, None, \"E\", \"F\", None])', number=10000, globals=globals())"
+    "timeit.timeit('fill_no_touch2({\"A\": 2, \"B\": 3}, [None, None, \"A\", \"D\", None, None, None, \"E\", \"F\", None])', number=1000, globals=globals())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
-   "id": "worldwide-enemy",
+   "execution_count": 544,
+   "id": "controlling-peter",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0038320259991451167"
+       "0.291645797995443"
       ]
      },
-     "execution_count": 317,
+     "execution_count": 544,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "timeit.timeit('fill_no_touch({\"A\": 2, \"B\": 3}, [None, None, \"A\", \"D\", None, None, None, \"E\", \"F\", None])', number=10000, globals=globals())"
+    "timeit.timeit('fill_no_touch({\"A\": 2, \"B\": 3}, [None, None, \"A\", \"D\", None, None, None, \"E\", \"F\", None])', number=1000000, globals=globals())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "demanding-hometown",
+   "id": "national-partner",
    "metadata": {},
    "outputs": [
     {
@@ -1475,7 +1418,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "exact-minimum",
+   "id": "distinct-remainder",
    "metadata": {},
    "outputs": [
     {
@@ -1496,7 +1439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "parallel-lithuania",
+   "id": "micro-manner",
    "metadata": {},
    "outputs": [],
    "source": []
