every within working but probably slow

--- a/Permutation Exploration.ipynb
+++ b/Permutation Exploration.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "equipped-mouse",
+   "id": "competitive-mistake",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1117,7 +1117,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "ceramic-diploma",
+   "id": "martial-prescription",
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "induced-anxiety",
+   "id": "impossible-encounter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "id": "vital-population",
+   "id": "associate-seattle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1234,7 +1234,7 @@
   {
    "cell_type": "code",
    "execution_count": 289,
-   "id": "undefined-difference",
+   "id": "prompt-consideration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1259,7 +1259,7 @@
   {
    "cell_type": "code",
    "execution_count": 546,
-   "id": "turkish-hierarchy",
+   "id": "painted-document",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1270,7 @@
   {
    "cell_type": "code",
    "execution_count": 547,
-   "id": "reverse-commissioner",
+   "id": "consecutive-buyer",
    "metadata": {},
    "outputs": [
     {
@@ -1291,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": 552,
-   "id": "affiliated-sport",
+   "id": "sunrise-hundred",
    "metadata": {
     "scrolled": true
    },
@@ -1314,7 +1314,7 @@
   {
    "cell_type": "code",
    "execution_count": 536,
-   "id": "boring-compilation",
+   "id": "straight-liberal",
    "metadata": {},
    "outputs": [
     {
@@ -1338,7 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": 537,
-   "id": "legal-magic",
+   "id": "turned-resolution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1355,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 538,
-   "id": "developing-miniature",
+   "id": "peripheral-zoning",
    "metadata": {},
    "outputs": [
     {
@@ -1376,7 +1376,7 @@
   {
    "cell_type": "code",
    "execution_count": 544,
-   "id": "controlling-peter",
+   "id": "proper-brazil",
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1397,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "national-partner",
+   "id": "velvet-saying",
    "metadata": {},
    "outputs": [
     {
@@ -1418,7 +1418,7 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "distinct-remainder",
+   "id": "conceptual-mortgage",
    "metadata": {},
    "outputs": [
     {
@@ -1438,8 +1438,225 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 719,
+   "id": "together-moses",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _fill_no_within(prev, countdown, counts, no_within_objs, board, n, i):\n",
+    "    if (i == len(board)):\n",
+    "        yield []\n",
+    "        return\n",
+    "    \n",
+    "    if board[i] != None:\n",
+    "        if board[i] in no_within_objs:\n",
+    "            if board[i] != prev and countdown != 0:\n",
+    "                return\n",
+    "            new_prev = board[i]\n",
+    "            new_countdown = n\n",
+    "        else:\n",
+    "            new_prev = prev\n",
+    "            new_countdown = countdown - 1\n",
+    "            \n",
+    "        for p in _fill_no_within(new_prev, new_countdown, counts, no_within_objs, board, n, i+1):\n",
+    "            yield [board[i]] + p\n",
+    "        return\n",
+    "        \n",
+    "    obj_choices = list(counts.keys())\n",
+    "    for obj in obj_choices:\n",
+    "        restricted_obj = obj in no_within_objs\n",
+    "        if obj == prev or not restricted_obj or countdown == 0:\n",
+    "            counts[obj] -= 1\n",
+    "            if counts[obj] == 0:\n",
+    "                del counts[obj]\n",
+    "                \n",
+    "            if restricted_obj:\n",
+    "                new_countdown = n\n",
+    "                new_prev = obj\n",
+    "            else:\n",
+    "                new_countdown = max(0, countdown - 1)\n",
+    "                new_prev = prev\n",
+    "                \n",
+    "            for p in _fill_no_within(new_prev, new_countdown, counts, no_within_objs, board, n, i+1):\n",
+    "                yield [obj] + p\n",
+    "            \n",
+    "            if obj in counts:\n",
+    "                counts[obj] += 1\n",
+    "            else:\n",
+    "                counts[obj] = 1\n",
+    "\n",
+    "def fill_no_within(counts, board, n):\n",
+    "    num_none = len([obj for obj in board if obj is None]) - sum_counts(counts)\n",
+    "    for p in _fill_no_within(None, 0, {**counts, None: num_none}, counts.keys(), board, n, 0):\n",
+    "        first_i = next(i for i, obj in enumerate(p) if obj in counts)\n",
+    "        last_i = next(i for i in range(len(p) - 1, -1, -1) if p[i] in counts and p[i] != p[first_i])\n",
+    "        diff = first_i + (len(p) - last_i)\n",
+    "        if diff > n:\n",
+    "            yield p"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 720,
+   "id": "annual-intersection",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fill_no_within2(counts, board, n):\n",
+    "    num_none = len([obj for obj in board if obj is None]) - sum_counts(counts)\n",
+    "    for p in permutations_multi({**counts, None: num_none}):\n",
+    "        j = 0 \n",
+    "        board_copy = board.copy()\n",
+    "        for i in range(len(board)):\n",
+    "            if board[i] is None:\n",
+    "                board_copy[i] = p[j]\n",
+    "                j += 1\n",
+    "        \n",
+    "        prev = None\n",
+    "        countdown = 0\n",
+    "        is_valid = True\n",
+    "        for i in range(-n, len(board_copy)):\n",
+    "            obj = board_copy[i]\n",
+    "            if obj in counts:\n",
+    "                if countdown != 0 and obj != prev:\n",
+    "                    is_valid = False\n",
+    "                    break\n",
+    "                prev = obj\n",
+    "                countdown = n\n",
+    "            else:\n",
+    "                countdown = max(0, countdown - 1)\n",
+    "        \n",
+    "        if is_valid:\n",
+    "            yield board_copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 721,
+   "id": "vulnerable-yahoo",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = [\"A\", None, None, None, None, None, None, None]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 722,
+   "id": "heated-miniature",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['A', 'A', None, None, 'B', None, None, None],\n",
+       " ['A', 'A', None, None, None, 'B', None, None],\n",
+       " ['A', None, None, None, 'B', None, None, 'A'],\n",
+       " ['A', None, None, 'B', None, None, None, 'A'],\n",
+       " ['A', None, None, 'B', None, None, 'A', None],\n",
+       " ['A', None, 'A', None, None, 'B', None, None]]"
+      ]
+     },
+     "execution_count": 722,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(fill_no_within({\"A\": 1, \"B\": 1}, b, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 723,
+   "id": "medium-prefix",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['A', 'A', None, None, 'B', None, None, None],\n",
+       " ['A', 'A', None, None, None, 'B', None, None],\n",
+       " ['A', None, 'A', None, None, 'B', None, None],\n",
+       " ['A', None, None, 'B', None, None, 'A', None],\n",
+       " ['A', None, None, 'B', None, None, None, 'A'],\n",
+       " ['A', None, None, None, 'B', None, None, 'A']]"
+      ]
+     },
+     "execution_count": 723,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(fill_no_within2({\"A\": 1, \"B\": 1}, b, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 724,
+   "id": "breathing-rogers",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2317381509928964"
+      ]
+     },
+     "execution_count": 724,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timeit.timeit('list(fill_no_within2({\"A\": 1, \"B\": 1}, b, 2))', number=1000, globals=globals())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 729,
+   "id": "fitted-athletics",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8494315559946699"
+      ]
+     },
+     "execution_count": 729,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "timeit.timeit('list(fill_no_within({\"A\": 1, \"B\": 1}, b, 2))', number=10000, globals=globals())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "micro-manner",
+   "id": "finite-desire",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def _fill_within(obj1, obj2, board, countdown, n, i):\n",
+    "    if i == len(board):\n",
+    "        yield []\n",
+    "        \n",
+    "    if board[i] is not None:\n",
+    "        if countdown == 0:\n",
+    "            \n",
+    "\n",
+    "def fill_within(obj1, obj2, board):\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "duplicate-drill",
    "metadata": {},
    "outputs": [],
    "source": []
